2009-10-23	Olivier Bilodeau <obilodeau@inverse.ca>
	* Added pf/html/user/content/templates/scan-in-progress.html.
	* Modified pf/cgi-bin/redir.cgi, pf/cgi-bin/release.cgi, 
	pf/conf/locale/en/LC_MESSAGES/packetfence.po, 
	pf/conf/locale/fr/LC_MESSAGES/packetfence.po, pf/lib/pf/scan.pm, 
	pf/lib/pf/web.pm: Nessus scan integration
	- Tracking the state of registration scans
	- New "scan in progress" page
	- redir.cgi and release.cgi will redirect to the new scan in progress
	  page if a scan is in progress
	- Not showing Nessus server's password in the logs anymore
	- Scanning page now redirect once the progress bar is over

2009-10-22	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/cgi-bin/release.cgi, pf/conf/documentation.conf, 
	pf/conf/locale/en/LC_MESSAGES/packetfence.po, 
	pf/conf/locale/fr/LC_MESSAGES/packetfence.po, pf/conf/pf.conf.defaults,
	pf/lib/pf/config.pm, pf/lib/pf/web.pm: Nessus scan integration
	- Forking in the background when calling a scan to pfcmd and redirecting
	  to a scan in progress page
	- New parameter scan.duration to control the length of the scan progress
	  bar
	- French and English translations of the new scan in progress page
	- New generate_scan_progress_page() in lib/pf/web.pm

	* pf/cgi-bin/release.cgi: Removed vid hack for Nessus scan violation

	* pf/lib/pf/trigger.pm: Removed deprecated code: trigger_scan and 
	trigger_scan_add subs

	* pf/lib/pf/scan.pm: Scan using violation_trigger mechanism now
	Also moved IP to MAC test earlier and quit if it can't resolve

	* pf/lib/pf/violation.pm: Preparing violation_trigger to handle scan 
	violations
	- new test: scan violation id not authorized in config
	- took out of the trigger id loop various one time tests (inefficient)
	- violation trigger returns 1 if at least one violation is added 0 
	  otherwise
	- bonus POD doc

	* pf/cgi-bin/pdp.cgi, pf/sbin/pfdetect: Fixed trappable ip test to add
	a violation.

2009-10-21	Olivier Bilodeau <obilodeau@inverse.ca>